fix overflow, working on horizontal lines for titles

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,12 @@
 body {
-margin: 0
+    width: 100%;
+    /* height: auto; */
+    margin: 0px;
+    /* white-space: normal;  */
+    /* padding: 0px; */
+    overflow-x: hidden; 
 }
+
 
 #one {
     width: 100%;
@@ -8,19 +14,35 @@ margin: 0
     background: grey;
 }
 
-#two {
-    width: 500px;
-    height: 300px;
+#my-info {
+    width: 600px;
+    height: 400px;
     background: rgb(241, 243, 244);
     margin-top: -100px;
     border: 2px solid black;
 }
 
+/* #recent-video-text {
+    margin-top: 78px;
+} */
+
+.title-wrap {
+    display: flex;
+    /* flex-direction: */
+}
+
+.lines {
+    width: 300px;
+    height: 10px;
+    border: 1px solid black;
+}
+
 #wrap {
     width: 100%;
-    height: 300px;
+    height: 500px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background: pink;
 }
 
@@ -38,6 +60,7 @@ margin: 0
 .video-wrap {
     height: 500px;
     width: 350px;
+    min-width: 300px;
     background: white;
     border: 1px solid black;
     margin: 0 20px;
@@ -63,11 +86,12 @@ margin: 0
 }
 
 #big-1 {
-    height: 300px;
-    width: 500px;
+    height: 394px;
+    width: 700px;
+    min-width: 500px;
     background: rgb(231, 234, 237);
     border: 1px solid black;
-    margin-top: -100px;
+    margin: -100px 20px 0 20px;
 }
 
 #big-1-description {
@@ -75,6 +99,5 @@ margin: 0
     width: 500px;
     background: rgb(231, 234, 237);
     border: 1px solid black;
-    margin-top: 49.5px;
-/*   margin-left: 100px; */
+    margin-top: 143px;
 }
